feat: implement category page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,18 @@ label {
 		@apply absolute bottom-4 left-4 p-2 pr-16 italic text-lg bg-gradient-to-r from-emerald-800 from-75%;
 	}
 }
+
+@layer utilities {
+	@variants responsive {
+		/* Hide scrollbar for Chrome, Safari and Opera */
+		.no-scrollbar::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Hide scrollbar for IE, Edge and Firefox */
+		.no-scrollbar {
+			-ms-overflow-style: none; /* IE and Edge */
+			scrollbar-width: none; /* Firefox */
+		}
+	}
+}
