--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ html {
 
 html,
 body {
-	@apply w-screen h-screen bg-neutral-950 text-neutral-300;
+	@apply w-screen h-screen;
 }
 
 a {
@@ -27,7 +27,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-	@apply self-center py-1 px-3 bg-emerald-800 rounded-md border-2 border-emerald-800 hover:bg-transparent hover:border-orange-700 hover:rounded-2xl;
+	@apply self-center py-1 px-3 text-neutral-300 dark:hover:text-neutral-900 bg-emerald-800 rounded-md border-2 border-emerald-800 hover:bg-transparent hover:border-orange-700 hover:rounded-2xl;
 }
 
 form {
@@ -51,7 +51,7 @@ label {
 		@apply text-3xl capitalize;
 	}
 	.paint-stroke {
-		@apply absolute bottom-4 left-4 p-2 pr-16 italic text-lg bg-gradient-to-r from-emerald-800 from-75%;
+		@apply absolute bottom-4 left-4 p-2 pr-16 italic text-neutral-300 text-lg bg-gradient-to-r from-emerald-800 from-75%;
 	}
 }
 
